--- a/data_wrangling_json/READme
+++ b/data_wrangling_json/READme
@@ -1,2 +1,2 @@
 The title for the assignment file is "springboardassignment.ipynb"
-It is located in the "Data folder"
+It is located in the "Data" folder
