--- a/Mini-Projects Folder/Text Analysis Naive Bayes/Naive_Bayes_Movie_ratings.ipynb
+++ b/Mini-Projects Folder/Text Analysis Naive Bayes/Naive_Bayes_Movie_ratings.ipynb
@@ -756,7 +756,7 @@
     "\n",
     "#the grid of parameters to search over\n",
     "alphas = [0.01,.1, 1, 5, 10, 50]\n",
-    "min_dfs = [.00001, .0001, .001, .01, .1, 1, 2] \n",
+    "min_dfs = [.00001, .0001, .001, .01, .1, 1] \n",
     "\n",
     "#Find the best value for alpha and min_df, and the best classifier\n",
     "best_alpha = None\n",
